<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Global -->
    <string name="app_name">onTime</string>
    <string name="app_version">onTime v4.1.0</string>
    <string name="app_author">crossRT</string>
    <string name="author">by CrossRT\nClick to open menu</string>
    
    <!-- Preferences -->
    <string name="preference_menu_title">Menu</string>
    <string name="rate_title">Rate ShowTime</string>
    <string name="rate_content">Comment on Google Play.</string>
    <string name="share_title">Share onTime</string>
    <string name="share_summary">Share this app with your friend.</string>
    <string name="donate_title">Donate me</string>
    <string name="donate_summary">Feel free to donate me via PayPal.</string>
    <string name="preferences_features">Extra features</string>
    <string name="theme_title">Theme setting</string>
    <string name="autoupdate_title">Auto Update</string>
	<string name="autoupdate_on">Update on every Saturday</string>
    <string name="autoupdate_off">Disable auto update</string>
    <string name="group_title">Group by Day</string>
    <string name="group_on">Subject is grouped by day</string>
    <string name="group_off">Disable group by day</string>
    <string name="dashclock_title">DashClock widget</string>
    <string name="dashclock_summary">For Android 4.2 above. Awesome feature!</string>
    <string name="intake_title">Intake setting</string>
    <string name="intake_current">Current intake: </string>
    <string name="intake_select">Select your intake</string>
    <string name="intake_select_failed">Connection error</string>
    <string name="intake_select_summary">Get latest intake when device is online.</string>
    <string name="intake_enter">Enter your intake</string>
    <string name="intake_enter_summary">Manually enter when intake is not found.</string>
    <string name="filter_title">Filter setting</string>
    <string name="lecture_title">Lecture</string>
    <string name="lecture_summary">Select your lecture</string>
    <string name="lab_title">Lab</string>
    <string name="lab_summary">Select your lab</string>
	<string name="tutorial_title">Tutorial</string>
    <string name="tutorial_summary">Select your tutorial</string>
    
    <!-- Preferences Dialog -->
    <string name="about_title">About</string>
    <string name="about_content">onTime is ex-ShowTime, APU\'s timetable assistant.\nThis app is created for the convenience of APU students.\n\nShare it to your friends if you found this app useful.\n\nCheers,\nCrossRT</string>
    <string name="donate_content">This app is totally free, but if you are pleased with my work, feel free to donate me.\nYour donation will help on my next project.\nI will be very grateful if you have decided to donate me.</string>
    <string name="donate_button">Yes, bring me on!</string>
    <string name="contact_me">Contact me</string>
    <string name="dashclock_button">Download DashClock now!</string>
    <string name="dashclock_content">Get your class before unlock the screen</string>
    
    <string name="menu_update">Update</string>
    <string name="no_class_filter">No class?\nTry PULL to refresh! </string>
    <string name="no_class_found">No class found</string>
    <string name="first_time">Thank you for using onTime\nNow pull to grab your timetable!</string>
    <string name="no_connection">No internet connection</string>
    
    <!-- Menu -->
    <string name="menu_normal_title">Normal</string>
    <string name="menu_today_title">Today</string>
    <string name="menu_all_title">All</string>
    
    <!-- ClassUpdater.java -->
    <string name="downloading">Downloading timetable</string>
    <string name="update_success">Timetable downloaded!</string>
	<string name="connection_error">Connection error</string>
	<string name="intake_no_class">Your intake timetable is empty</string>
	
	<!-- Changelog -->
	<string name="changelog_full_title">Change Log</string>
    <string name="changelog_title">What\'s New</string>
    <string name="changelog_ok_button">OK</string>
    <string name="changelog_show_full">more&#8230;</string>
    <string name="changelog">Change Log</string>
    
    <!-- DashClock -->
    <string name="display_before">Display class before (minutes)</string>
    
    <!-- Widget -->
	<string name="widget_todays_class">Today\'s Class</string>    
</resources>
