<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <Preference android:key="menu_dialog" android:title="@string/app_version" android:summary="@string/app_author" />
    
    <PreferenceCategory android:title="@string/intake_title" android:key="Intake">
		<Preference android:title="@string/intake_current" android:key="viewIntake"/>
		<Preference android:key="selectIntake" android:dialogTitle="@string/intake_select" android:title="@string/intake_select" android:summary="@string/intake_select_summary"/>
		<EditTextPreference android:key="intakeCode" android:dialogTitle="@string/intake_enter" android:title="@string/intake_enter" android:summary="@string/intake_enter_summary"/>
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/filter_title" android:key="Filter">
		<ListPreference android:title="@string/lecture_title" android:entries="@array/lecture" android:entryValues="@array/lecture" android:dialogTitle="@string/lecture_summary" android:key="lecture" />
		<ListPreference android:entries="@array/lab" android:title="@string/lab_title" android:entryValues="@array/lab" android:dialogTitle="@string/lab_summary" android:key="lab" />
		<ListPreference android:title="@string/tutorial_title" android:entries="@array/tutorial" android:entryValues="@array/tutorial" android:dialogTitle="@string/tutorial_summary" android:key="tutorial" />
	</PreferenceCategory>

</PreferenceScreen>
